--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,6 @@
+# docker-compose.access.yml
+# Usage: 
+#   docker compose up
 version: '3'
 services:
   web:
@@ -9,6 +12,7 @@ services:
       - FLASK_APP=app
       - FLASK_ENV=development
       - REDIS_URL=redis://redis:6379
+
     volumes:
       - .:/app
 
