--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - FLASK_APP=app
       - FLASK_ENV=development
       - REDIS_URL=redis://redis:6379
-      - BASE_URL=localhost:5000
+      - BASE_URL=https://4b80-192-249-3-218.ngrok.io
       - AAI_PK=4951dd81c6854670a21a59696359e7ac
 
     volumes:
@@ -29,6 +29,7 @@ services:
       - REDIS_URL=redis://redis:6379
       - FLASK_APP=app
       - FLASK_ENV=development
+      - BASE_URL=https://4b80-192-249-3-218.ngrok.io
       - AAI_PK=4951dd81c6854670a21a59696359e7ac
     volumes:
       - .:/app
